--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -2,6 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
 		<members>Project__c</members>
+		<members>ProyectLine__c</members>
 		<name>CustomObject</name>
 	</types>
 	<version>55.0</version>
