--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -28,6 +28,10 @@
 	</types>
 	<types>
 		<members>*</members>
+		<name>GlobalValueSet</name>
+	</types>
+	<types>
+		<members>*</members>
 		<name>LightningComponentBundle</name>
 	</types>
 	<version>55.0</version>
