--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -2,37 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
 		<members>*</members>
-		<name>ApexClass</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>ApexTrigger</name>
-	</types>
-	<types>
-		<members>Opportunity.Project_Manager__c</members>
-		<members>OpportunityLineItem.Role__c</members>
-		<members>User.RatePerHour__c</members>
-		<members>User.Role__c</members>
-		<name>CustomField</name>
-	</types>
-	<types>
-		<members>ProjectLineItem__c</members>
-		<members>ProjectResource__c</members>
-		<members>Project__c</members>
-		<members>Task__c</members>
-		<name>CustomObject</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>CustomTab</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>GlobalValueSet</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>LightningComponentBundle</name>
+		<name>Flow</name>
 	</types>
 	<version>55.0</version>
 </Package>
